// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridList with footer renders a list 1`] = `
<div
  class="css-view-1dbjc4n r-WebkitOverflowScrolling-150rngu r-flexDirection-eqz5dr r-flexGrow-16y2uox r-flexShrink-1wbh5a2 r-overflowX-11yh6sk r-overflowY-1rnoaur r-transform-1sncvnh"
  data-testid="grid-list"
>
  <div
    class="css-view-1dbjc4n"
  >
    <div
      class="css-view-1dbjc4n"
    >
      <div
        class="css-view-1dbjc4n"
        style="flex-direction: row;"
      >
        <div
          class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
        >
          <div
            class="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
            style="background-image: url(channels/live_user_tfue-800x450.jpg);"
          />
          <img
            alt=""
            class="css-accessibilityImage-9pa8cd"
            draggable="false"
            src="channels/live_user_tfue-800x450.jpg"
          />
        </div>
        <div
          class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
        >
          <div
            class="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
            style="background-image: url(channels/live_user_ninja-800x450.jpg);"
          />
          <img
            alt=""
            class="css-accessibilityImage-9pa8cd"
            draggable="false"
            src="channels/live_user_ninja-800x450.jpg"
          />
        </div>
      </div>
    </div>
    <div
      class="css-view-1dbjc4n"
      style="height: 0px;"
    />
    <div
      class="css-view-1dbjc4n"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif; line-height: 1.5;"
      >
        FOOTER
      </div>
    </div>
  </div>
</div>
`;

exports[`GridList with header renders a list 1`] = `
<div
  class="css-view-1dbjc4n r-WebkitOverflowScrolling-150rngu r-flexDirection-eqz5dr r-flexGrow-16y2uox r-flexShrink-1wbh5a2 r-overflowX-11yh6sk r-overflowY-1rnoaur r-transform-1sncvnh"
  data-testid="grid-list"
>
  <div
    class="css-view-1dbjc4n"
  >
    <div
      class="css-view-1dbjc4n"
    >
      <div
        class="css-text-901oao"
        dir="auto"
        style="font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif; line-height: 1.5;"
      >
        HEADER
      </div>
    </div>
    <div
      class="css-view-1dbjc4n"
    >
      <div
        class="css-view-1dbjc4n"
        style="flex-direction: row;"
      >
        <div
          class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
        >
          <div
            class="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
            style="background-image: url(channels/live_user_tfue-800x450.jpg);"
          />
          <img
            alt=""
            class="css-accessibilityImage-9pa8cd"
            draggable="false"
            src="channels/live_user_tfue-800x450.jpg"
          />
        </div>
        <div
          class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
        >
          <div
            class="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
            style="background-image: url(channels/live_user_ninja-800x450.jpg);"
          />
          <img
            alt=""
            class="css-accessibilityImage-9pa8cd"
            draggable="false"
            src="channels/live_user_ninja-800x450.jpg"
          />
        </div>
      </div>
    </div>
    <div
      class="css-view-1dbjc4n"
      style="height: 0px;"
    />
  </div>
</div>
`;

exports[`GridList without header nor footer renders a list 1`] = `
<div
  class="css-view-1dbjc4n r-WebkitOverflowScrolling-150rngu r-flexDirection-eqz5dr r-flexGrow-16y2uox r-flexShrink-1wbh5a2 r-overflowX-11yh6sk r-overflowY-1rnoaur r-transform-1sncvnh"
  data-testid="grid-list"
>
  <div
    class="css-view-1dbjc4n"
  >
    <div
      class="css-view-1dbjc4n"
    >
      <div
        class="css-view-1dbjc4n"
        style="flex-direction: row;"
      >
        <div
          class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
        >
          <div
            class="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
            style="background-image: url(channels/live_user_tfue-800x450.jpg);"
          />
          <img
            alt=""
            class="css-accessibilityImage-9pa8cd"
            draggable="false"
            src="channels/live_user_tfue-800x450.jpg"
          />
        </div>
        <div
          class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
        >
          <div
            class="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
            style="background-image: url(channels/live_user_ninja-800x450.jpg);"
          />
          <img
            alt=""
            class="css-accessibilityImage-9pa8cd"
            draggable="false"
            src="channels/live_user_ninja-800x450.jpg"
          />
        </div>
      </div>
    </div>
    <div
      class="css-view-1dbjc4n"
      style="height: 0px;"
    />
  </div>
</div>
`;
